runs/runs/github.com/bsuper/biomet/logs/build-master-2020-07-17T07.55.txt
Picked Local content provider.
Using local repo /tmp/r2d-test-2020-07-17T07.55bau4uaeq/github.com/bsuper/biomet.
Using PythonBuildPack builder
Step 1/51 : FROM buildpack-deps:bionic
 ---> 5d109dc6d8a0
Step 2/51 : ENV DEBIAN_FRONTEND=noninteractive
 ---> Using cache
 ---> 84875aa039ff
Step 3/51 : RUN apt-get -qq update &&     apt-get -qq install --yes --no-install-recommends locales > /dev/null &&     apt-get -qq purge &&     apt-get -qq clean &&     rm -rf /var/lib/apt/lists/*
 ---> Using cache
 ---> 2c6f3445209c
Step 4/51 : RUN echo "en_US.UTF-8 UTF-8" > /etc/locale.gen &&     locale-gen
 ---> Using cache
 ---> 5ac40a1069ef
Step 5/51 : ENV LC_ALL en_US.UTF-8
 ---> Using cache
 ---> 0569ecd6efb3
Step 6/51 : ENV LANG en_US.UTF-8
 ---> Using cache
 ---> bd3372a8f400
Step 7/51 : ENV LANGUAGE en_US.UTF-8
 ---> Using cache
 ---> ab87a637d837
Step 8/51 : ENV SHELL /bin/bash
 ---> Using cache
 ---> 50ed7363eaf5
Step 9/51 : ARG NB_USER
 ---> Using cache
 ---> 0b8893bd6422
Step 10/51 : ARG NB_UID
 ---> Using cache
 ---> b9e6fa4ea16e
Step 11/51 : ENV USER ${NB_USER}
 ---> Using cache
 ---> b142a4c01942
Step 12/51 : ENV HOME /home/${NB_USER}
 ---> Using cache
 ---> e11d5723ab90
Step 13/51 : RUN groupadd         --gid ${NB_UID}         ${NB_USER} &&     useradd         --comment "Default user"         --create-home         --gid ${NB_UID}         --no-log-init         --shell /bin/bash         --uid ${NB_UID}         ${NB_USER}
 ---> Using cache
 ---> e20a5903ae77
Step 14/51 : RUN wget --quiet -O - https://deb.nodesource.com/gpgkey/nodesource.gpg.key |  apt-key add - &&     DISTRO="bionic" &&     echo "deb https://deb.nodesource.com/node_10.x $DISTRO main" >> /etc/apt/sources.list.d/nodesource.list &&     echo "deb-src https://deb.nodesource.com/node_10.x $DISTRO main" >> /etc/apt/sources.list.d/nodesource.list
 ---> Using cache
 ---> 730bb79c819d
Step 15/51 : RUN apt-get -qq update &&     apt-get -qq install --yes --no-install-recommends        less        nodejs        unzip        > /dev/null &&     apt-get -qq purge &&     apt-get -qq clean &&     rm -rf /var/lib/apt/lists/*
 ---> Using cache
 ---> 2be5b9d2edc7
Step 16/51 : EXPOSE 8888
 ---> Using cache
 ---> 7fcdbaf0fe40
Step 17/51 : ENV APP_BASE /srv
 ---> Using cache
 ---> ee51ea8ec11a
Step 18/51 : ENV NPM_DIR ${APP_BASE}/npm
 ---> Using cache
 ---> f34fdbe18446
Step 19/51 : ENV NPM_CONFIG_GLOBALCONFIG ${NPM_DIR}/npmrc
 ---> Using cache
 ---> 833e25d9d235
Step 20/51 : ENV CONDA_DIR ${APP_BASE}/conda
 ---> Using cache
 ---> 8ee468f15616
Step 21/51 : ENV NB_PYTHON_PREFIX ${CONDA_DIR}/envs/notebook
 ---> Using cache
 ---> 971c9391c0ab
Step 22/51 : ENV KERNEL_PYTHON_PREFIX ${NB_PYTHON_PREFIX}
 ---> Using cache
 ---> 7fa50abe8e21
Step 23/51 : ENV PATH ${NB_PYTHON_PREFIX}/bin:${CONDA_DIR}/bin:${NPM_DIR}/bin:${PATH}
 ---> Using cache
 ---> eaa621b5d97f
Step 24/51 : COPY build_script_files/-2fusr-2flocal-2flib-2fpython3-2e8-2fdist-2dpackages-2frepo2docker-2fbuildpacks-2fconda-2factivate-2dconda-2esh-1be18e /etc/profile.d/activate-conda.sh
 ---> Using cache
 ---> 9ffab983afa0
Step 25/51 : COPY build_script_files/-2fusr-2flocal-2flib-2fpython3-2e8-2fdist-2dpackages-2frepo2docker-2fbuildpacks-2fconda-2fenvironment-2epy-2d3-2e7-2efrozen-2eyml-26bd38 /tmp/environment.yml
 ---> Using cache
 ---> 9b3e6c528ba6
Step 26/51 : COPY build_script_files/-2fusr-2flocal-2flib-2fpython3-2e8-2fdist-2dpackages-2frepo2docker-2fbuildpacks-2fconda-2finstall-2dminiconda-2ebash-813f10 /tmp/install-miniconda.bash
 ---> Using cache
 ---> e52d3b4016a9
Step 27/51 : RUN mkdir -p ${NPM_DIR} && chown -R ${NB_USER}:${NB_USER} ${NPM_DIR}
 ---> Using cache
 ---> 0a8f7bcc0bd7
Step 28/51 : USER ${NB_USER}
 ---> Using cache
 ---> e295fca18e9d
Step 29/51 : RUN npm config --global set prefix ${NPM_DIR}
 ---> Using cache
 ---> b3629329dd8f
Step 30/51 : USER root
 ---> Using cache
 ---> 5ba3698f0957
Step 31/51 : RUN bash /tmp/install-miniconda.bash && rm /tmp/install-miniconda.bash /tmp/environment.yml
 ---> Using cache
 ---> ecb18ec9bb2f
Step 32/51 : ARG REPO_DIR=${HOME}
 ---> Using cache
 ---> 8f78500beba3
Step 33/51 : ENV REPO_DIR ${REPO_DIR}
 ---> Using cache
 ---> 300bfe3eb940
Step 34/51 : WORKDIR ${REPO_DIR}
 ---> Using cache
 ---> ab56d4c94aaf
Step 35/51 : ENV PATH ${HOME}/.local/bin:${REPO_DIR}/.local/bin:${PATH}
 ---> Using cache
 ---> 26a826700420
Step 36/51 : ENV CONDA_DEFAULT_ENV ${KERNEL_PYTHON_PREFIX}
 ---> Using cache
 ---> ebb7f28a23e9
Step 37/51 : COPY src/requirements.txt ${REPO_DIR}/requirements.txt
 ---> 670cd337f916
Step 38/51 : USER root
 ---> Running in f458d341b2ea
Removing intermediate container f458d341b2ea
 ---> 9a2ab0362776
Step 39/51 : RUN chown -R ${NB_USER}:${NB_USER} ${REPO_DIR}
 ---> Running in 31a562989320
Removing intermediate container 31a562989320
 ---> 70ceaa0b8d75
Step 40/51 : USER ${NB_USER}
 ---> Running in f46c87a46361
Removing intermediate container f46c87a46361
 ---> de170556736c
Step 41/51 : RUN ${KERNEL_PYTHON_PREFIX}/bin/pip install --no-cache-dir -r "requirements.txt"
 ---> Running in 16bb8de3bbf5
[91mWARNING: pip is being invoked by an old script wrapper. This will fail in a future version of pip.
Please see https://github.com/pypa/pip/issues/5599 for advice on fixing the underlying issue.
To avoid this problem you can invoke Python with '-m pip' instead of running pip directly.
[0mCollecting appnope==0.1.0
  Downloading appnope-0.1.0-py2.py3-none-any.whl (4.0 kB)
Collecting backports-abc==0.4
  Downloading backports_abc-0.4-py2.py3-none-any.whl (5.1 kB)
Collecting backports.shutil-get-terminal-size==1.0.0
  Downloading backports.shutil_get_terminal_size-1.0.0-py2.py3-none-any.whl (6.5 kB)
Collecting backports.ssl-match-hostname==3.5.0.1
  Downloading backports.ssl_match_hostname-3.5.0.1.tar.gz (5.6 kB)
Collecting certifi==2016.2.28
  Downloading certifi-2016.2.28-py2.py3-none-any.whl (366 kB)
Collecting configparser==3.3.0.post2
  Downloading configparser-3.3.0r2.tar.gz (32 kB)
[91m    ERROR: Command errored out with exit status 1:
     command: /srv/conda/envs/notebook/bin/python -c 'import sys, setuptools, tokenize; sys.argv[0] = '"'"'/tmp/pip-install-th7l2qy_/configparser/setup.py'"'"'; __file__='"'"'/tmp/pip-install-th7l2qy_/configparser/setup.py'"'"';f=getattr(tokenize, '"'"'open'"'"', open)(__file__);code=f.read().replace('"'"'\r\n'"'"', '"'"'\n'"'"');f.close();exec(compile(code, __file__, '"'"'exec'"'"'))' egg_info --egg-base /tmp/pip-install-th7l2qy_/configparser/pip-egg-info
         cwd: /tmp/pip-install-th7l2qy_/configparser/
    Complete output (12 lines):
    Traceback (most recent call last):
      File "<string>", line 1, in <module>
      File "/srv/conda/envs/notebook/lib/python3.7/site-packages/setuptools/__init__.py", line 6, in <module>
        import distutils.core
      File "/srv/conda/envs/notebook/lib/python3.7/distutils/core.py", line 18, in <module>
        from distutils.config import PyPIRCCommand
      File "/srv/conda/envs/notebook/lib/python3.7/distutils/config.py", line 7, in <module>
        from configparser import RawConfigParser
      File "/tmp/pip-install-th7l2qy_/configparser/configparser.py", line 397
        _KEYCRE = re.compile(ur"%\(([^)]+)\)s")
                                             ^
    SyntaxError: invalid syntax
    ----------------------------------------
[0m[91mERROR: Command errored out with exit status 1: python setup.py egg_info Check the logs for full command output.
[0mRemoving intermediate container 16bb8de3bbf5
The command '/bin/sh -c ${KERNEL_PYTHON_PREFIX}/bin/pip install --no-cache-dir -r "requirements.txt"' returned a non-zero code: 1Traceback (most recent call last):
  File "/usr/local/lib/python3.8/dist-packages/repo2docker_checker/checker.py", line 318, in test_one_repo
    image, checkout_path = build_repo(
  File "/usr/local/lib/python3.8/dist-packages/repo2docker_checker/checker.py", line 128, in build_repo
    run(
  File "/usr/lib/python3.8/subprocess.py", line 512, in run
    raise CalledProcessError(retcode, process.args,
subprocess.CalledProcessError: Command '['jupyter-repo2docker', '--no-run', '--no-clean', '--image-name', 'r2d-test-github.com-bsuper-biomet:c09204a', '/tmp/r2d-test-2020-07-17T07.55bau4uaeq/github.com/bsuper/biomet']' returned non-zero exit status 1.
